[gd_scene load_steps=4 format=3 uid="uid://c8xau71e6fxph"]

[ext_resource type="Script" path="res://Scenes/Components/exp_component.gd" id="1_iwtcl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7hexd"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yrhvh"]
radius = 4.0

[node name="ExpComponent" type="Node2D"]
script = ExtResource("1_iwtcl")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_7hexd")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_yrhvh")

[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_entered"]
